# mechaenetia

./: .editorconfig  .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: labeler.yml  rust.yml
.meta/: format_all_source_files.sh  format_files.sh
.run/: Build Dynamic Load (no-debug).run.xml  Build Mold Dynamic Load (no-debug).run.xml  Build Mold.run.xml  Build.run.xml  Client Dynamic Load (no-debug).run.xml  Client Mold Dynamic Load (no-debug).run.xml  Client Mold WGPU Dynamic Load (no-debug).run.xml  Client Mold WGPU.run.xml  Client WGPU Dynamic Load (no-debug).run.xml  Client WGPU.run.xml  Client.run.xml  Clippy.run.xml  Format.run.xml  Server Dynamic Load (no-debug).run.xml  Server Mold Dynamic Load (no-debug).run.xml  Server Mold.run.xml  Server.run.xml  Test Dynamic Load (no-debug).run.xml  Test Mold Dynamic Load (no-debug).run.xml  Test Mold.run.xml  Test.run.xml  Universal Dynamic Load (no-debug).run.xml  Universal Mold WGPU Dynamic Load (no-debug).run.xml  Universal TUI Dynamic Load (no-debug).run.xml  Universal TUI.run.xml  Universal WGPU Dynamic Load (no-debug).run.xml  Universal WGPU.run.xml  Universal.run.xml
assets/lang/de-DE/: general.lang
assets/lang/en-US/: general.lang
assets/tiny_font/: info.txt
config/: display.ron  log4rs.ron
docs/: Procedural_Resources.dot
docs/design/: Procedural_Resources.dot  Tool_System.xcf
mechaenetia_client/: Cargo.toml
mechaenetia_client/src/: lib.rs  states.rs
mechaenetia_client/src/main_menu/: mod.rs  style.rs
mechaenetia_client/src/sim/: mod.rs
mechaenetia_client_wgpu/: Cargo.toml
mechaenetia_client_wgpu/src/: main.rs  window_icon_handling.rs
mechaenetia_engine/: Cargo.toml
mechaenetia_engine/src/: lib.rs  states.rs
mechaenetia_engine/src/sim/: chunks.rs  dimension.rs  mod.rs
mechaenetia_server/: Cargo.toml
mechaenetia_server/src/: lib.rs
mechaenetia_server_dedicated/: Cargo.toml
mechaenetia_server_dedicated/src/: main.rs
mechaenetia_utils/: Cargo.toml
mechaenetia_utils/src/: lib.rs  logging.rs
src/: client.rs  experimenting.rs  init.rs  lib.rs  main.rs  server.rs
src/client/: mod.rs
src/client/states/: exiting.rs  loading.rs  main_menu.rs  mod.rs
src/client_tui/: mod.rs
src/client_tui/states/: exiting.rs  mod.rs  not_connected.rs
src/client_tui/tui_plugin/: mod.rs  transform_event_keyboard.rs
src/client_wgpu/: mod.rs
src/client_wgpu/states/: exiting.rs  loading.rs  main_menu.rs  mod.rs
src/core/: logger.rs  mod.rs
src/core/logger/: conditional_append_appender.rs  launch_roll_file_appender.rs  mod.rs
src/mechaenetia/: lib.rs
src/mechaenetia/chunk/: mod.rs
src/mechaenetia/client/: mod.rs
src/mechaenetia/game_data/: mod.rs
src/mechaenetia/game_data/chunks/: chunk.rs  mod.rs
src/mechaenetia/game_data/worlds/: mod.rs
src/mechaenetia/game_data/worlds/world/: mod.rs  world_generator.rs
src/mechaenetia/server/: mod.rs
src/mechaenetia/state/: event.rs  mod.rs  start.rs  update.rs
src/mechaenetia/universal/: mod.rs
src/server/: mod.rs  save.rs
src/server/states/: exiting.rs  loading.rs  mod.rs  not_running.rs  unloading.rs
src/universal/: conditional_map.rs  exit.rs  i18n.rs  local_server.rs  mod.rs
src/universal/commands/: client.rs  mod.rs  server.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  not_bash.rs
