[package]
name = "mechaenetia"
version = "0.1.0"
authors = ["Gregorius Techneticies <gregoriustech@gmail.com>", "OvermindDL1 <overminddl1@gmail.com>"]
edition = "2018"

[dependencies]
# Base system dependencies
log4rs = {version = "1.0", features = ["toml_format"]}
tracing = {version = "0.1", features = ["attributes", "log", "log-always"]}
structopt = "0.3"
serde_derive = "1.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
# Game Data dependencies
indexmap = "1.6"
smol_str = "0.1.17"
rayon = "1.5"
# Game Engine dependencies
bevy = { version = "0.5", default_features = false, features = ["trace", "bevy_dynamic_plugin", "bevy_gltf"] }

[features]
default = ["wgpu"]
wgpu = ["bevy/bevy_audio", "bevy/bevy_gilrs", "bevy/bevy_wgpu", "bevy/bevy_winit", "bevy/render", "bevy/png", "bevy/hdr", "bevy/mp3", "bevy/x11"]

[lib]
name = "mechaenetia"
path = "src/lib.rs"

[[bin]]
name = "mechaenetia"
path = "src/main.rs"
