#[package]
#name = "mechaenetia"
#version = "0.1.0"
#authors = ["Gregorius Techneticies <gregoriustech@gmail.com>", "OvermindDL1 <overminddl1@gmail.com>"]
#edition = "2021"

[workspace]
resolver = "2"
members = [
	"mechaenetia_utils",
	"mechaenetia_engine",
	"mechaenetia_client",
	"mechaenetia_client_wgpu",
]

[workspace.package]
version = "0.1.0"
authors = ["Gregorius Techneticies <gregoriustech@gmail.com>", "OvermindDL1 <overminddl1@gmail.com>"]

[workspace.dependencies]
# Workspace dependencies
mechaenetia_client = { path = "mechaenetia_client" }
mechaenetia_client_wgpu = { path = "mechaenetia_client_wgpu" }
mechaenetia_engine = { path = "mechaenetia_engine" }
mechaenetia_utils = { path = "mechaenetia_utils" }
# Base system dependencies
anyhow = "1.0"
clap = { version = "4.2", features = ["derive", "env"] }
#lazy_static = "1.4.0"
#log4rs = {version = "1.0", features = ["toml_format"]}
#ron = "0.6.4"
#serde = {version = "1.0", features=["derive"]}
#serde-value = "0.7"
#serde_derive = "1.0"
#serde_json = "1.0"
#thiserror = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "registry"] }
# Game Data dependencies
#indexmap = "1.6"
#rayon = "1.5"
smol_str = "0.1"
# Game Engine dependencies
bevy = "0.10"
#bevy-inspector-egui = { version = "0.4", optional = true }
#bevy_egui = { version = "0.4", optional = true }
#crossterm = { version = "0.19", optional = true}
#fluent = "0.15"
#fluent-syntax = "0.11"
#intl-memoizer = "0.5"
#tui = { version = "0.14", default-features = false, features = ['crossterm'], optional = true }
#unic-langid = "0.9"

#[dependencies]
#anyhow.workspace = true
#clap.workspace = true
#bevy.workspace = true
#tracing.workspace = true
#mechaenetia_utils.workspace = true
#
#[features]
##default = ["client_tui", "client_wgpu", "server"]
##client_wgpu = ["bevy/bevy_audio", "bevy/bevy_gilrs", "bevy/bevy_wgpu", "bevy/bevy_winit", "bevy/render", "bevy/png", "bevy/hdr", "bevy/mp3", "bevy/x11", "bevy_egui", "bevy-inspector-egui"]
##client_tui = ["crossterm", "tui"]
##server = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[lib]
#name = "mechaenetia"
#path = "src/lib.rs"
#
#[[bin]]
#name = "mechaenetia"
#path = "src/main.rs"
