[package]
name = "mechaenetia_server_dedicated"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
clap.workspace = true
mechaenetia_client.workspace = true
mechaenetia_engine.workspace = true
mechaenetia_server.workspace = true
mechaenetia_utils.workspace = true
tracing.workspace = true
