[package]
name = "xtask"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
fs-err = "2.9.0"
semver = "1.0.18"
time = { version = "0.3.25", default-features = false, features = ["std"] }
