[package]
name = "xtask"
edition = "2024"
rust-version = "1.85"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
semver = "1.0"
xshell = "0.2.7"
